src/test/testFiles/valid/subtitlesValid.manimdsl
@subtitle("hei", 4)
let x = Stack<number>() {3,2,1};
@subtitle("hei1", x.size(), true)
let y = Stack<number>() {3,2,1};
@subtitleOnce("hei2", y.size() > 3, 3)
let z = Stack<number>() {3,2,1};
@subtitle("hei3")